# hackathon

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  DOCKER.md  Dockerfile  GITHUB_RUNNER_DEPLOYMENT.md  GITHUB_SETUP.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: control.yml  deploy.yml
src/: TODO.md  app.py  bootstrap.py  config.py  dtos.py  gen_test.py  main.py  models.py  service_bus.py
src/bot/: __init__.py  app.py  assets.py  handlers.py  inline_keyboards.py  main.py  main_router.py  states.py  utils.py
src/bot/handlers/: __init__.py  callbacks.py  content_plan.py  content_plan_generation.py  content_plan_menu.py  content_plan_old.py  content_plan_updated.py  fallback.py  generation.py  image_generation.py  new_generation.py  ngo_info.py  questionnaire.py  refactoring.py  start.py  text_editing.py  wizard_handler.py
src/bot/keyboards/: __init__.py  inline.py  reply.py
src/infrastructure/: __init__.py  card_generation.py  content_plan_scheduler.py  database.py  gpt.py  image_generation.py  prompt_builder.py  publication_notificator.py  response_processor.py
src/infrastructure/repositories/: __init__.py  content_plan_repository.py  (+1 more)
src/scheduler/: content_plan_scheduler.py
src/services/: __init__.py  card_generation.py  content_generation.py  content_plan_service.py  gpt.py  image_generation.py  ngo_service.py  notification_service.py  prompt_builder.py  response_processor.py  text_generation.py
src/templates/: style.css  styleguide.css  telegram_post.html  telegram_post_default.html  universal_card.html
(+9 files in other folders)
